<resources>
    <string name="app_name">FeelsBook-kzhang1</string>
    <string name="fear">fear</string>
    <string name="sadness">sadness</string>
    <string name="anger">anger</string>
    <string name="love">love</string>
    <string name="joy">joy</string>
    <string name="surprise">surprise</string>
    <string name="title_home">home</string>
    <string name="history">history</string>
    <string name="emotion">emotion</string>
    <string name="date">date</string>
    <string name="comment">comment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_comment">Enter Comment \n(less than 100 characters)</string>
    <string name="what_is_your_emotion">Click to add an emotion. \nLong click to quick add.</string>
    <string name="show_stats">Show Stats</string>

</resources>
