<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_emotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotion"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textView_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:maxLength="12"
        android:text="@string/comment" />

</LinearLayout>